--- a/Tecnicas de programação I/Pasta Geral/Projeto/Projeto.ipynb
+++ b/Tecnicas de programação I/Pasta Geral/Projeto/Projeto.ipynb
@@ -81,25 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m linha \u001b[38;5;129;01min\u001b[39;00m linhas:\n\u001b[0;32m     11\u001b[0m     pacote \u001b[38;5;241m=\u001b[39m linha\u001b[38;5;241m.\u001b[39mstrip()\n\u001b[1;32m---> 12\u001b[0m     \u001b[43msubprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpip\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43minstall\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpacote\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDependências instaladas com sucesso!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2032.0_x64__qbz5n2kfra8p0\\Lib\\subprocess.py:550\u001b[0m, in \u001b[0;36mrun\u001b[1;34m(input, capture_output, timeout, check, *popenargs, **kwargs)\u001b[0m\n\u001b[0;32m    548\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m Popen(\u001b[38;5;241m*\u001b[39mpopenargs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs) \u001b[38;5;28;01mas\u001b[39;00m process:\n\u001b[0;32m    549\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 550\u001b[0m         stdout, stderr \u001b[38;5;241m=\u001b[39m \u001b[43mprocess\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcommunicate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    551\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m TimeoutExpired \u001b[38;5;28;01mas\u001b[39;00m exc:\n\u001b[0;32m    552\u001b[0m         process\u001b[38;5;241m.\u001b[39mkill()\n",
-      "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2032.0_x64__qbz5n2kfra8p0\\Lib\\subprocess.py:1201\u001b[0m, in \u001b[0;36mPopen.communicate\u001b[1;34m(self, input, timeout)\u001b[0m\n\u001b[0;32m   1199\u001b[0m         stderr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstderr\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m   1200\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstderr\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m-> 1201\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1202\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   1203\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2032.0_x64__qbz5n2kfra8p0\\Lib\\subprocess.py:1264\u001b[0m, in \u001b[0;36mPopen.wait\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m   1262\u001b[0m     endtime \u001b[38;5;241m=\u001b[39m _time() \u001b[38;5;241m+\u001b[39m timeout\n\u001b[0;32m   1263\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 1264\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_wait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1265\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyboardInterrupt\u001b[39;00m:\n\u001b[0;32m   1266\u001b[0m     \u001b[38;5;66;03m# https://bugs.python.org/issue25942\u001b[39;00m\n\u001b[0;32m   1267\u001b[0m     \u001b[38;5;66;03m# The first keyboard interrupt waits briefly for the child to\u001b[39;00m\n\u001b[0;32m   1268\u001b[0m     \u001b[38;5;66;03m# exit under the common assumption that it also received the ^C\u001b[39;00m\n\u001b[0;32m   1269\u001b[0m     \u001b[38;5;66;03m# generated SIGINT and will exit rapidly.\u001b[39;00m\n\u001b[0;32m   1270\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
-      "File \u001b[1;32mC:\\Program Files\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_3.11.2032.0_x64__qbz5n2kfra8p0\\Lib\\subprocess.py:1588\u001b[0m, in \u001b[0;36mPopen._wait\u001b[1;34m(self, timeout)\u001b[0m\n\u001b[0;32m   1585\u001b[0m     timeout_millis \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(timeout \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m1000\u001b[39m)\n\u001b[0;32m   1586\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreturncode \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   1587\u001b[0m     \u001b[38;5;66;03m# API note: Returns immediately if timeout_millis == 0.\u001b[39;00m\n\u001b[1;32m-> 1588\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43m_winapi\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mWaitForSingleObject\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_handle\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m   1589\u001b[0m \u001b[43m                                         \u001b[49m\u001b[43mtimeout_millis\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1590\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m result \u001b[38;5;241m==\u001b[39m _winapi\u001b[38;5;241m.\u001b[39mWAIT_TIMEOUT:\n\u001b[0;32m   1591\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m TimeoutExpired(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39margs, timeout)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import subprocess\n",
     "\n",
@@ -1789,8 +1773,6 @@
     "# Agrupando por continente e calculando a média do salário\n",
     "average_salary_by_continent = df_full_data.groupby('continent')[['salary_in_usd']].mean().sort_values(by='salary_in_usd', ascending=False)\n",
     "\n",
-    "# Exibindo os resultados\n",
-    "# print(average_salary_by_continent)\n",
     "average_salary_by_continent"
    ]
   },
@@ -2072,7 +2054,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Após cálculo da variação salarial de acordo com o nível de experiência, concluí-se que o funcionário de nível pleno de melhor custo/benefício está localizado na Ásia "
+    "Após cálculo da variação salarial de acordo com o nível de experiência, concluí-se que o funcionário de nível pleno de melhor custo/benefício está localizado na Ásia de acordo com nossa amostragem"
    ]
   },
   {
@@ -2647,19 +2629,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Existe uma variação significativa nos salários entre um Cientista de Dados de nível executivo e um de nível sênior, sendo €169.441,60 para o executivo na Europa e €37.132,50 para o sênior na Ásia.\n",
+    "Após verificar a quantidade de Cientistas de Dados disponíveis em cada continente, agrupados por experiência, verifica-se que :\n",
+    "- O nível de experiência que contém uma quantidade de dados significativa para a análise de melhor custo benefício para contratação seria o \"Mid-level\". Isso porque  possui uma contagem razoável distribuídas nos continentes (13 na Ásia, 94 na Europa, 330 na América do Norte) além de possuir maior equilíbrio em relação aos níveis mais baixos (Entry-level) e mais altos (Senior-level e Executive-level).\n",
+    "- O funcionário de nível pleno de melhor custo/benefício está localizado na Ásia. \n",
+    " Análise salarial outros fatores envolvidos\n",
     "\n",
-    "Assim, dado o custo potencialmente mais elevado de contratação do profissional de nível executivo, a recomendação é investir em profissionais de nível sênior e fornecer capacitações adicionais.\n",
-    "\n",
-    "A lógica por trás dessa recomendação é que, embora a média salarial para profissionais sênior seja mais baixa, a oferta desses profissionais é maior. Portanto, ao investir em treinamento e desenvolvimento para os profissionais de nível sênior, as empresas podem desenvolver uma equipe altamente qualificada e experiente que, eventualmente, possa assumir funções de liderança ou executivas. No entanto, é importante considerar outros fatores como a disponibilidade de talentos, a cultura da empresa e as especificidades do papel executivo."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "Ao analisar a viabilidade salarial de um cargo em diferentes países, é crucial considerar diversos fatores para obter uma compreensão abrangente da situação. Embora a pesquisa de dados salariais seja fundamental, é igualmente importante converter os salários para uma moeda comum, avaliar o custo de vida em cada país, analisar benefícios adicionais, levar em conta as implicações fiscais, avaliar oportunidades de avanço profissional, comparar condições de trabalho, consultar profissionais do setor e considerar indicadores econômicos. No entanto, é evidente que nossos dados atuais podem não ser suficientes para uma análise completa. A inclusão de variáveis adicionais, como qualidade de vida, oportunidades de crescimento, cultura e estilo de vida, seria crucial para uma decisão informada sobre aceitar uma oferta de emprego em um país específico."
+    "Ao analisar o salário de Cientista de Dados, importante considerar diversos fatores para obter uma compreensão abrangente da situação para obter um resultado mais preciso. Dessa forma, embora a pesquisa de dados salariais seja fundamental, além de converter os salários para uma moeda comum, necessário ainda a coleta de dados e inclusão de variáveis adicionais tendo em vista:\n",
+    "- Custo de vida em cada local;\n",
+    "- Benefícios adicionais ofericidos além dos salários;\n",
+    "- Implicações fiscais em cada região em relação ao salário;\n",
+    "- Avaliação de plano de carreira e oportunidades de avanço profissional;\n",
+    "- Condições de trabalho como carga horária e cultura corporativa;\n",
+    "- Indicadores econômicos de cada país ou região como taxa de desemprego, inflação e crescimento econômico."
    ]
   }
  ],
@@ -2679,7 +2660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
